--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
 	"name": "chat-test",
-	"version": "1.0.0",
-	"description": "A test of my coding ability to create a node js chat application",
+	"version": "1.0.1",
+	"description": "A test with Node JS to create an online chat application.",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://www.github.com/mfrancis2337/chat-test"
+	},
 	"dependencies": {
 		"express": "^4.17.1",
 		"socket.io": "^3.0.4",
